--- a/menu.html
+++ b/menu.html
@@ -8,7 +8,7 @@
     <li class="menu_def"><a href="features.html" title="A listing of relax's features">Features</a></li>
     <li class="menu_def"><a href="docs.html" title="The internal help system, sample scripts, and the relax manual">Documentation</a></li>
     <li class="menu_def"><a href="download.html" title="Instructions for downloading relax">Download</a></li>
-    <li class="menu_def"><a href="communication.html" title="The bug tracker and mailing lists">Mailing lists & trackers</a></li>
+    <li class="menu_def"><a href="communication.html" title="The bug tracker and mailing lists">Mailing lists &amp; trackers</a></li>
     <li class="menu_def"><a href="api/" title="The API documentation">The relax internals</a></li>
     <li class="menu_def"><a href="screenshots.html" title="relax UI screenshots">Screenshots</a></li>
     <li class="menu_def"><a href="faq.html" title="Frequently asked questions (FAQ)">FAQ</a></li>
