Fix for the http://www.nmr-relax.com/download.html page.
This was found by the W3C validator (http://validator.w3.org).

--- a/download.html
+++ b/download.html
@@ -113,8 +113,8 @@
     <div id="MS_Windows" class="main_h2">
       <h2>MS Windows</h2>
       <p>The pre-compiled binary release for 32 bit Windows can be downloaded from the link below.  These have been compiled for Python 2.7 therefore, if there are problems with the compiled C modules and the command:</p>
-      <p><em>$ relax --info</em><p>
-      <p>says that the C modules are not installed, please install Python 2.7.
+      <p><em>$ relax --info</em></p>
+      <p>says that the C modules are not installed, please install Python 2.7.</p>
 
 <table cellspacing="10">
   <tbody>
