The QR Code image is now included on the http://www.nmr-relax.com/qr.html page.

--- a/qr.html
+++ b/qr.html
@@ -25,6 +25,7 @@
   <div class="main_box">
     <h1>QR Code redirection</h1>
 
+     <img src="images/qr_code.png" alt="QR Code for http://www.nmr-relax.com/qr.html"/>
   </div>
 
 </div>
