Fix for the http://www.nmr-relax.com/qr.html page.
This was detected by the W3C validator.

--- a/qr.html
+++ b/qr.html
@@ -13,7 +13,7 @@
 -->
 
 <head>
-  <meta http-equiv="REFRESH" content="5;url=http://www.nmr-relax.com">
+  <meta http-equiv="REFRESH" content="5;url=http://www.nmr-relax.com"/>
   <!--#include virtual="head.html" -->
 </head>
 
