--- a/qr.html
+++ b/qr.html
@@ -13,8 +13,8 @@
 -->
 
 <head>
-  <meta http-equiv="REFRESH" content="5;url=http://www.nmr-relax.com"/>
   <!--#include virtual="head.html" -->
+  <meta http-equiv="REFRESH" content="5;url=http://www.nmr-relax.com"/>
 </head>
 
 <body>
@@ -26,6 +26,9 @@
     <h1>QR Code redirection</h1>
 
      <img src="images/qr_code.png" alt="QR Code for http://www.nmr-relax.com/qr.html"/>
+
+     <p>Redirecting to <a href="http://www.nmr-relax.com">http://www.nmr-relax.com</a> in 5 seconds...</p>
+
   </div>
 
 </div>
