Added a title to the <head> tag of the http://www.nmr-relax.com/qr.html page.
This allows the page to pass the W3C validator (http://validator.w3.org).

--- a/qr.html
+++ b/qr.html
@@ -13,7 +13,8 @@
 -->
 
 <head>
-  <meta http-equiv="REFRESH" content="5;url=http://www.nmr-relax.com" />
+  <title>QR Code redirection page</title>
+  <meta http-equiv="REFRESH" content="5; url=http://www.nmr-relax.com" />
   <!--#include virtual="head.html" -->
 </head>
 
