Updated the http://www.nmr-relax.com/download.html page for the Mac OS X installation via fink.
The Python version number has been increased from 2.5 to 2.7, and the descriptions have been
improved.

--- a/download.html
+++ b/download.html
@@ -178,11 +178,12 @@
 
         <h3>Fink</h3>
 
-          <p>Pre-compiled binary releases of certain relax versions are available for Mac OS X within the <a href="http://www.finkproject.org/">Fink project</a>.  These can be installed for Python 2.5 with the command:</p>
+          <p>Pre-compiled binary releases of certain relax versions are available for Mac OS X within the <a href="http://www.finkproject.org/">Fink project</a>.  These can be installed for Python 2.7 with the command:</p>
 
-        <p><em>> fink install relax-py25</em></p>
+        <p><em>> fink install relax-py27</em></p>
 
         <p>The relax releases packaged within Fink can been browsed <a href="http://pdb.finkproject.org/pdb/browse.php?name=relax">here</a>.  If the desired version is not available, please download the relevant source package below.</p>
+        <p>Note that when installing via fink, all the dependencies will be automatically selected and installed as well.</p>
 
         <h3>Dependencies</h3>
           <ul class="main_ul">
@@ -192,6 +193,7 @@
             <li><a href="http://www.wxpython.org/">wxPython</a> (optional) &gt;= 2.8: <a href="http://www.wxpython.org/download.php#stable">wxPython stable downloads</a></li>
           </ul>
 
+        <p>These need only to be manually installed if the source installation method is used.</p>
         <p>When using a 64-bit system, 64-bit compatible wxPython must be used, i.e. a version using the Cocoa API for implementing the GUI. Currently, this is only available for Python 2.7. One version can be downloaded <a href="http://downloads.sourceforge.net/wxpython/wxPython2.9-osx-2.9.1.1-cocoa-py2.7.dmg">here</a>.</p>
 
     </div>
