More edits to the fink description at http://www.nmr-relax.com/download.html.

--- a/download.html
+++ b/download.html
@@ -183,7 +183,7 @@
         <p><em>> fink install relax-py27</em></p>
 
         <p>The relax releases packaged within Fink can been browsed <a href="http://pdb.finkproject.org/pdb/browse.php?name=relax">here</a>.  If the desired version is not available, please download the relevant source package below.</p>
-        <p>Note that when installing via fink, all the dependencies will be automatically selected and installed as well.  Note that, although automatic, there could be over 100 source packages that need to be compiled to set up the full GNU compilation chain and other libraries required to build Python, numpy, scipy, etc.  This may take anywhere between 2 days to over a week (don't forget to mention this to your poor sys-admin).</p>
+        <p>Note that when installing via fink, all the dependencies will be automatically selected and installed as well.  Although automatic, note that when starting from scratch that there could be well over 250 source packages that need to be compiled (to set up the full GNU compilation chain and other libraries which are then required to build Python, numpy, scipy, etc.).  This may take anywhere between 2 days to over a week (don't forget to mention this fact to your poor sys-admin).</p>
 
         <h3>Dependencies</h3>
           <ul class="main_ul">
