--- a/communication.html
+++ b/communication.html
@@ -44,6 +44,9 @@
       <li>
        <a href="http://www.mail-archive.com/relax-announce@gna.org/">The Mail Archive</a>
       </li>
+      <li>
+       <a href="http://dir.gmane.org/gmane.science.nmr.relax.announce">Gmane archives</a>
+      </li>
      </ul>
     </div>
 
@@ -56,6 +59,9 @@
       </li>
       <li>
        <a href="http://www.mail-archive.com/relax-users@gna.org/">The Mail Archive</a>
+      </li>
+      <li>
+       <a href="http://dir.gmane.org/gmane.science.nmr.relax.user">Gmane archives</a>
       </li>
      </ul>
     </div>
@@ -70,6 +76,9 @@
       <li>
        <a href="http://www.mail-archive.com/relax-devel@gna.org/">The Mail Archive</a>
       </li>
+      <li>
+       <a href="http://dir.gmane.org/gmane.science.nmr.relax.devel">Gmane archives</a>
+      </li>
      </ul>
      </div>
 
@@ -82,6 +91,9 @@
       </li>
       <li>
        <a href="http://www.mail-archive.com/relax-commits@gna.org/">The Mail Archive</a>
+      </li>
+      <li>
+       <a href="http://dir.gmane.org/gmane.science.nmr.relax.scm">Gmane archives</a>
       </li>
      </ul>
      </div>
