--- a/download.html
+++ b/download.html
@@ -185,6 +185,14 @@
         <p>The relax releases packaged within Fink can been browsed <a href="http://pdb.finkproject.org/pdb/browse.php?name=relax">here</a>.  If the desired version is not available, please download the relevant source package below.</p>
         <p>Note that when installing via fink, all the dependencies will be automatically selected and installed as well.  Although automatic, when starting from scratch that there could be well over 250 source packages that need to be compiled (to set up the full GNU compilation chain and other libraries which are then required to build Python, numpy, scipy, etc.).  This may take anywhere between 2 days to over a week (don't forget to mention this fact to your poor sys-admin).</p>
 
+        <p>The fink relax packages for different Python versions can be found at:</p>
+          <ul class="main_ul">
+            <li><a href="http://pdb.finkproject.org/pdb/package.php/relax-py27">relax-py27</a></li>
+            <li><a href="http://pdb.finkproject.org/pdb/package.php/relax-py26">relax-py26</a></li>
+            <li><a href="http://pdb.finkproject.org/pdb/package.php/relax-py25">relax-py25</a></li>
+            <li><a href="http://pdb.finkproject.org/pdb/package.php/relax-py24">relax-py24</a></li>
+          </ul>
+
         <h3>Dependencies</h3>
           <ul class="main_ul">
             <li><a href="http://python.org">Python</a> &gt;= 2.5 (excluding &gt;= 3.0): <a href="http://www.python.org/ftp/python/2.7.2/python-2.7.2-macosx10.3.dmg">python-2.7.2-macosx10.3.dmg</a></li>
