Converted the freshmeat links to freecode, as it is now called, on http://www.nmr-relax.com/links.html.
The following relax developer links have been added:
    http://freecode.com/users/dauvergne (Edward d'Auvergne).

--- a/links.html
+++ b/links.html
@@ -48,13 +48,13 @@
     </tr>
     <tr>
       <td><a href="http://freshmeat.net"><img src="images/fmlogo.png" alt="Freshmeat" class="image"/></a></td>
-      <td>freshmeat is the Web's largest index of Unix and cross-platform software (mainly open source).</td>
-      <td>The nmr-relax default branch <a href="http://freshmeat.net/projects/nmr-relax">http://freshmeat.net/projects/nmr-relax</a>.</td>
+      <td>Freecode, previously known as freshmeat, is the Web&#39;s largest index of Unix and cross-platform software (mainly open source).</td>
+      <td>The relax project page is <a href="http://freecode.com/projects/nmr-relax">http://freecode.com/projects/nmr-relax</a>.  The relax developers pages are:  <a href="http://freecode.com/users/dauvergne">Edward d&#39;Auvergne</a></td>
     </tr>
     <tr>
       <td><a href="http://cia.vc"><img src="images/banner-70-nb.png" alt="Freshmeat" class="image"/></a></td>
       <td>The open source informant.  CIA tracks open source projects in real-time.</td>
-      <td>The relax real-time open source activity stats page <a href="http://cia.vc/stats/project/relax">http://cia.vc/stats/project/relax</a>.  This website also has pages for each of the relax developers (in alphabetical order):  <a href="http://cia.vc/stats/author/bugman">Edward d'Auvergne</a>, <a href="http://cia.vc/stats/author/michaelbieri">Michael Bieri</a>, <a href="http://cia.vc/stats/author/macraild">Chris MacRaild</a>, <a href="http://cia.vc/stats/author/semor">S&#233;bastien Morin</a>, <a href="http://cia.vc/stats/author/pansapiens">Andrew Perry</a>, <a href="http://cia.vc/stats/author/han87">Han Sun</a>, <a href="http://cia.vc/stats/author/varioustoxins">Gary Thompson</a>.</td>
+      <td>The relax real-time open source activity stats page <a href="http://cia.vc/stats/project/relax">http://cia.vc/stats/project/relax</a>.  This website also has pages for each of the relax developers (in alphabetical order):  <a href="http://cia.vc/stats/author/bugman">Edward d&#39;Auvergne</a>, <a href="http://cia.vc/stats/author/michaelbieri">Michael Bieri</a>, <a href="http://cia.vc/stats/author/macraild">Chris MacRaild</a>, <a href="http://cia.vc/stats/author/semor">S&#233;bastien Morin</a>, <a href="http://cia.vc/stats/author/pansapiens">Andrew Perry</a>, <a href="http://cia.vc/stats/author/han87">Han Sun</a>, <a href="http://cia.vc/stats/author/varioustoxins">Gary Thompson</a>.</td>
     </tr>
     <tr>
       <td><a href="http://linuxlinks.com"><img src="images/linuxlinks.png" alt="LinuxLinks" class="image"/></a></td>
