Small corrections for http://www.nmr-relax.com/links.html.

--- a/links.html
+++ b/links.html
@@ -39,7 +39,7 @@
     <tr>
       <td><a href="http://gna.org"><img src="images/gnalogo.png" alt="Gna!" class="image"/></a></td>
       <td>Gna! is a central point for the development, distribution and maintenance of Libre Software (Free Software) projects.</td>
-      <td>The relax project page at <a href="https://gna.org/projects/relax">https://gna.org/projects/relax</a>.</td>
+      <td>The relax project page is <a href="https://gna.org/projects/relax">https://gna.org/projects/relax</a>.</td>
     </tr>
     <tr>
       <td><a href="http://mail-archive.com"><img src="images/mail-archive.png" alt="The mail archive" class="image"/></a></td>
@@ -54,7 +54,7 @@
     <tr>
       <td><a href="http://cia.vc"><img src="images/banner-70-nb.png" alt="Freshmeat" class="image"/></a></td>
       <td>The open source informant.  CIA tracks open source projects in real-time.</td>
-      <td>The relax real-time open source activity stats page <a href="http://cia.vc/stats/project/relax">http://cia.vc/stats/project/relax</a>.  This website also has pages for each of the relax developers (in alphabetical order):  <a href="http://cia.vc/stats/author/bugman">Edward d&#39;Auvergne</a>, <a href="http://cia.vc/stats/author/michaelbieri">Michael Bieri</a>, <a href="http://cia.vc/stats/author/macraild">Chris MacRaild</a>, <a href="http://cia.vc/stats/author/semor">S&#233;bastien Morin</a>, <a href="http://cia.vc/stats/author/pansapiens">Andrew Perry</a>, <a href="http://cia.vc/stats/author/han87">Han Sun</a>, <a href="http://cia.vc/stats/author/varioustoxins">Gary Thompson</a>.</td>
+      <td>The relax real-time open source activity stats page is <a href="http://cia.vc/stats/project/relax">http://cia.vc/stats/project/relax</a>.  This website also has pages for each of the relax developers (in alphabetical order):  <a href="http://cia.vc/stats/author/bugman">Edward d&#39;Auvergne</a>, <a href="http://cia.vc/stats/author/michaelbieri">Michael Bieri</a>, <a href="http://cia.vc/stats/author/macraild">Chris MacRaild</a>, <a href="http://cia.vc/stats/author/semor">S&#233;bastien Morin</a>, <a href="http://cia.vc/stats/author/pansapiens">Andrew Perry</a>, <a href="http://cia.vc/stats/author/han87">Han Sun</a>, <a href="http://cia.vc/stats/author/varioustoxins">Gary Thompson</a>.</td>
     </tr>
     <tr>
       <td><a href="http://linuxlinks.com"><img src="images/linuxlinks.png" alt="LinuxLinks" class="image"/></a></td>
