Changed the links that the logos point to on http://www.nmr-relax.com/links.html.
These now point to the relevant relax pages on those sites, rather than their homepages.

--- a/links.html
+++ b/links.html
@@ -37,27 +37,27 @@
       <td><strong>Where to find relax</strong></td>
     </tr>
     <tr>
-      <td><a href="http://gna.org"><img src="images/gnalogo.png" alt="Gna!" class="image"/></a></td>
+      <td><a href="http://gna.org/projects/relax"><img src="images/gnalogo.png" alt="Gna! logo" class="image"/></a></td>
       <td>Gna! is a central point for the development, distribution and maintenance of Libre Software (Free Software) projects.</td>
       <td>The relax project page is <a href="https://gna.org/projects/relax">https://gna.org/projects/relax</a>.</td>
     </tr>
     <tr>
-      <td><a href="http://mail-archive.com"><img src="images/mail-archive.png" alt="The mail archive" class="image"/></a></td>
+      <td><a href="http://mail-archive.com/find.php?&q=relax"><img src="images/mail-archive.png" alt="The mail archive logo" class="image"/></a></td>
       <td>An easy-to-use archiving service for electronic mailing lists.</td>
       <td>The archived relax mailing lists include <a href="http://mail-archive.com/relax-announce@gna.org/">relax-announce</a>, <a href="http://mail-archive.com/relax-users@gna.org/">relax-users</a>, <a href="http://mail-archive.com/relax-devel@gna.org/">relax-devel</a>, and <a href="http://mail-archive.com/relax-commits@gna.org/">relax-commits</a>.</td>
     </tr>
     <tr>
-      <td><a href="http://freshmeat.net"><img src="images/fmlogo.png" alt="Freshmeat" class="image"/></a></td>
+      <td><a href="http://freecode.com/projects/nmr-relax"><img src="images/fmlogo.png" alt="Freecode logo" class="image"/></a></td>
       <td>Freecode, previously known as freshmeat, is the Web&#39;s largest index of Unix and cross-platform software (mainly open source).</td>
       <td>The relax project page is <a href="http://freecode.com/projects/nmr-relax">http://freecode.com/projects/nmr-relax</a>.  The relax developers pages are:  <a href="http://freecode.com/users/dauvergne">Edward d&#39;Auvergne</a></td>
     </tr>
     <tr>
-      <td><a href="http://cia.vc"><img src="images/banner-70-nb.png" alt="Freshmeat" class="image"/></a></td>
+      <td><a href="http://cia.vc/stats/project/relax"><img src="images/banner-70-nb.png" alt="Freshmeat logo" class="image"/></a></td>
       <td>The open source informant.  CIA tracks open source projects in real-time.</td>
       <td>The relax real-time open source activity stats page is <a href="http://cia.vc/stats/project/relax">http://cia.vc/stats/project/relax</a>.  This website also has pages for each of the relax developers (in alphabetical order):  <a href="http://cia.vc/stats/author/bugman">Edward d&#39;Auvergne</a>, <a href="http://cia.vc/stats/author/michaelbieri">Michael Bieri</a>, <a href="http://cia.vc/stats/author/macraild">Chris MacRaild</a>, <a href="http://cia.vc/stats/author/semor">S&#233;bastien Morin</a>, <a href="http://cia.vc/stats/author/pansapiens">Andrew Perry</a>, <a href="http://cia.vc/stats/author/han87">Han Sun</a>, <a href="http://cia.vc/stats/author/varioustoxins">Gary Thompson</a>.</td>
     </tr>
     <tr>
-      <td><a href="http://linuxlinks.com"><img src="images/linuxlinks.png" alt="LinuxLinks" class="image"/></a></td>
+      <td><a href="http://linuxlinks.com/Software/Scientific/Biology/Proteins/"><img src="images/linuxlinks.png" alt="LinuxLinks logo" class="image"/></a></td>
       <td>LinuxLinks.com is a website listing many Linux software projects.</td>
       <td>On the <a href="http://linuxlinks.com/Software/">Software</a> : <a href="http://linuxlinks.com/Software/Scientific/">Scientific</a> : <a href="http://linuxlinks.com/Software/Scientific/Biology/">Biology</a> : <a href="http://linuxlinks.com/Software/Scientific/Biology/Proteins/">Proteins</a> page.</td>
     </tr>
@@ -75,7 +75,7 @@
       <td><strong>Description</strong></td>
     </tr>
     <tr>
-      <td><a href="http://home.gna.org/nessy"><img src="images/NESSY.png" alt="NESSY" class="image"/></a></td>
+      <td><a href="http://home.gna.org/nessy"><img src="images/NESSY.png" alt="NESSY logo" class="image"/></a></td>
       <td>NESSY is an open source software to analyse NMR relaxation dispersion data of either CPMG or R1p (R1rho) dispersion experiments.</td>
     </tr>
   </tbody>
