Updates for the LinuxLinks links on http://www.nmr-relax.com/links.html.
The new icon has been added and the links concatinated into the final link.

--- a/links.html
+++ b/links.html
@@ -57,9 +57,9 @@
       <td>The relax real-time open source activity stats page is <a href="http://cia.vc/stats/project/relax">http://cia.vc/stats/project/relax</a>.  This website also has pages for each of the relax developers (in alphabetical order):  <a href="http://cia.vc/stats/author/bugman">Edward d&#39;Auvergne</a>, <a href="http://cia.vc/stats/author/michaelbieri">Michael Bieri</a>, <a href="http://cia.vc/stats/author/macraild">Chris MacRaild</a>, <a href="http://cia.vc/stats/author/semor">S&#233;bastien Morin</a>, <a href="http://cia.vc/stats/author/pansapiens">Andrew Perry</a>, <a href="http://cia.vc/stats/author/han87">Han Sun</a>, <a href="http://cia.vc/stats/author/varioustoxins">Gary Thompson</a>.</td>
     </tr>
     <tr>
-      <td><a href="http://linuxlinks.com/Software/Scientific/Biology/Proteins/"><img src="images/linuxlinks.png" alt="LinuxLinks logo" class="image"/></a></td>
+      <td><a href="http://linuxlinks.com/Software/Scientific/Biology/Proteins/"><img src="images/Top_Logo.gif" alt="LinuxLinks logo" class="image"/></a></td>
       <td>LinuxLinks.com is a website listing many Linux software projects.</td>
-      <td>On the <a href="http://linuxlinks.com/Software/">Software</a> : <a href="http://linuxlinks.com/Software/Scientific/">Scientific</a> : <a href="http://linuxlinks.com/Software/Scientific/Biology/">Biology</a> : <a href="http://linuxlinks.com/Software/Scientific/Biology/Proteins/">Proteins</a> page.</td>
+      <td>On the <a href="http://linuxlinks.com/Software/Scientific/Biology/Proteins/">Software:Scientific:Biology:Proteins</a> page.</td>
     </tr>
   </tbody>
 </table>
