Added all of the relax developer Gna! pages to http://www.nmr-relax.com.

--- a/links.html
+++ b/links.html
@@ -39,7 +39,7 @@
     <tr>
       <td><a href="http://gna.org/projects/relax"><img src="images/gnalogo.png" alt="Gna! logo" class="image"/></a></td>
       <td>Gna! is a central point for the development, distribution and maintenance of Libre Software (Free Software) projects.</td>
-      <td>The relax project page is <a href="https://gna.org/projects/relax">https://gna.org/projects/relax</a>.</td>
+      <td>The relax project page is <a href="https://gna.org/projects/relax">https://gna.org/projects/relax</a>.  The relax developer Gna! pages are (in alphabetical order):  <a href="http://gna.org/users/bugman">Edward d&#39;Auvergne</a>, <a href="http://gna.org/users/michaelbieri">Michael Bieri</a>, <a href="http://gna.org/users/macraild">Chris MacRaild</a>, <a href="http://gna.org/users/semor">S&#233;bastien Morin</a>, <a href="http://gna.org/users/pansapiens">Andrew Perry</a>, <a href="http://gna.org/users/han87">Han Sun</a>, <a href="http://gna.org/users/varioustoxins">Gary Thompson</a>.</td>
     </tr>
     <tr>
       <td><a href="http://mail-archive.com/find.php?&q=relax"><img src="images/mail-archive.png" alt="The mail archive logo" class="image"/></a></td>
