Formatting for http://www.nmr-relax.com/links.html.

--- a/links.html
+++ b/links.html
@@ -49,7 +49,7 @@
     <tr>
       <td><a href="http://freecode.com/projects/nmr-relax"><img src="images/fmlogo.png" alt="Freecode logo" class="image"/></a></td>
       <td>Freecode, previously known as freshmeat, is the Web&#39;s largest index of Unix and cross-platform software (mainly open source).</td>
-      <td>The relax project page is <a href="http://freecode.com/projects/nmr-relax">http://freecode.com/projects/nmr-relax</a>.  The relax developers pages are:  <a href="http://freecode.com/users/dauvergne">Edward d&#39;Auvergne</a></td>
+      <td>The relax project page is <a href="http://freecode.com/projects/nmr-relax">http://freecode.com/projects/nmr-relax</a>.  The relax developers pages are:  <a href="http://freecode.com/users/dauvergne">Edward d&#39;Auvergne</a>.</td>
     </tr>
     <tr>
       <td><a href="http://cia.vc/stats/project/relax"><img src="images/banner-70-nb.png" alt="Freshmeat logo" class="image"/></a></td>
