Added the DMOZ ODP links to http://www.nmr-relax.com/links.html.

--- a/links.html
+++ b/links.html
@@ -67,6 +67,11 @@
       <td>On the <a href="http://linuxlinks.com/Software/Scientific/Biology/Proteins/">Software:Scientific:Biology:Proteins</a> page.</td>
     </tr>
     <tr>
+      <td><a href="http://www.dmoz.org/Science/Chemistry/Nuclear_Magnetic_Resonance/Software/"><img src="images/lizard4.gif" alt="DMOZ Open Directoyr Project logo" class="image"/></a></td>
+      <td>The DMOZ Open Directory Project.</td>
+      <td>On the <a href="http://www.dmoz.org/Science/Chemistry/Nuclear_Magnetic_Resonance/Software/">Top : Science : Chemistry : Nuclear Magnetic Resonance : Software</a> page.</td>
+    </tr>
+    <tr>
       <td><a href="http://linux.softpedia.com/get/Science/relax-22351.shtml"><img src="images/softpedia_logo4a.gif" alt="Softpedia logo" class="image"/></a></td>
       <td>Softpedia is the encyclopedia of free software downloads.</td>
       <td>The relax page on Softpedia is <a href="http://linux.softpedia.com/get/Science/relax-22351.shtml">http://linux.softpedia.com/get/Science/relax-22351.shtml</a>.  The relax developers pages are:  <a href="http://linux.softpedia.com/developer/Edward-d-039-Auvergne-5136.html">Edward d&#39;Auvergne</a>.</td>
