Added the Gmane thread, blog, NNTP, and RSS links to http://www.nmr-relax.com/communications.html.

--- a/communication.html
+++ b/communication.html
@@ -45,7 +45,7 @@
        <a href="http://www.mail-archive.com/relax-announce@gna.org/">The Mail Archive</a>
       </li>
       <li>
-       <a href="http://dir.gmane.org/gmane.science.nmr.relax.announce">Gmane archives</a>
+       <a href="http://dir.gmane.org/gmane.science.nmr.relax.announce">Gmane archives</a> (<a href="http://news.gmane.org/gmane.science.nmr.relax.announce">thread</a>, <a href="http://blog.gmane.org/gmane.science.nmr.relax.announce">blog</a>, <a href="nntp://news.gmane.org/gmane.science.nmr.relax.announce">NNTP</a>, <a href="http://rss.gmane.org/messages/excerpts/gmane.science.nmr.relax.announce">RSS</a>)
       </li>
      </ul>
     </div>
@@ -61,7 +61,7 @@
        <a href="http://www.mail-archive.com/relax-users@gna.org/">The Mail Archive</a>
       </li>
       <li>
-       <a href="http://dir.gmane.org/gmane.science.nmr.relax.user">Gmane archives</a>
+       <a href="http://dir.gmane.org/gmane.science.nmr.relax.user">Gmane archives</a> (<a href="http://news.gmane.org/gmane.science.nmr.relax.user">thread</a>, <a href="http://blog.gmane.org/gmane.science.nmr.relax.user">blog</a>, <a href="nntp://news.gmane.org/gmane.science.nmr.relax.user">NNTP</a>, <a href="http://rss.gmane.org/messages/excerpts/gmane.science.nmr.relax.user">RSS</a>)
       </li>
      </ul>
     </div>
@@ -77,7 +77,7 @@
        <a href="http://www.mail-archive.com/relax-devel@gna.org/">The Mail Archive</a>
       </li>
       <li>
-       <a href="http://dir.gmane.org/gmane.science.nmr.relax.devel">Gmane archives</a>
+       <a href="http://dir.gmane.org/gmane.science.nmr.relax.devel">Gmane archives</a> (<a href="http://news.gmane.org/gmane.science.nmr.relax.devel">thread</a>, <a href="http://blog.gmane.org/gmane.science.nmr.relax.devel">blog</a>, <a href="nntp://news.gmane.org/gmane.science.nmr.relax.devel">NNTP</a>, <a href="http://rss.gmane.org/messages/excerpts/gmane.science.nmr.relax.devel">RSS</a>)
       </li>
      </ul>
      </div>
@@ -93,7 +93,7 @@
        <a href="http://www.mail-archive.com/relax-commits@gna.org/">The Mail Archive</a>
       </li>
       <li>
-       <a href="http://dir.gmane.org/gmane.science.nmr.relax.scm">Gmane archives</a>
+       <a href="http://dir.gmane.org/gmane.science.nmr.relax.scm">Gmane archives</a> (<a href="http://news.gmane.org/gmane.science.nmr.relax.scm">thread</a>, <a href="http://blog.gmane.org/gmane.science.nmr.relax.scm">blog</a>, <a href="nntp://news.gmane.org/gmane.science.nmr.relax.scm">NNTP</a>, <a href="http://rss.gmane.org/messages/excerpts/gmane.science.nmr.relax.scm">RSS</a>)
       </li>
      </ul>
      </div>
