Added the http://pro-linux.de relax page to http://www.nmr-relax.com/links.html.
The relax page there is currently http://www.pro-linux.de/cgi-bin/DBApp/check.cgi?ShowApp..17723.10.

--- a/links.html
+++ b/links.html
@@ -76,6 +76,11 @@
       <td>Softpedia is the encyclopedia of free software downloads.</td>
       <td>The relax page on Softpedia is <a href="http://linux.softpedia.com/get/Science/relax-22351.shtml">http://linux.softpedia.com/get/Science/relax-22351.shtml</a>.  The relax developers pages are:  <a href="http://linux.softpedia.com/developer/Edward-d-039-Auvergne-5136.html">Edward d&#39;Auvergne</a>.</td>
     </tr>
+    <tr>
+      <td><a href="http://www.pro-linux.de/cgi-bin/DBApp/check.cgi?ShowApp..17723.100"><img src="images/pl-logo.png" alt="Pro-Linux.de logo" class="image"/></a></td>
+      <td>Pro-Linux ist eine der gr&#246;&#223;ten deutschsprachigen Seiten zum Thema Linux.</td>
+      <td>The relax page is <a href="http://www.pro-linux.de/cgi-bin/DBApp/check.cgi?ShowApp..17723.100">http://www.pro-linux.de/cgi-bin/DBApp/check.cgi?ShowApp..17723.100</a>.</td>
+    </tr>
   </tbody>
 </table>
     </div>
